--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,20 @@ a {
   color: inherit;
 }
 
+.theme {
+  transition: 1s all ease;
+}
+
+.dark {
+  background-color: #111;
+  color: #bbb;
+}
+
+.light {
+  background-color: white;
+  color: #111;
+}
+
 .container {
   max-width: 1366px;
   min-height: 100vh;
